log/build_2025-08-08_23-30-22/temperature_system/stdout_stderr.log
running egg_info
writing ../../build/temperature_system/temperature_system.egg-info/PKG-INFO
writing dependency_links to ../../build/temperature_system/temperature_system.egg-info/dependency_links.txt
writing entry points to ../../build/temperature_system/temperature_system.egg-info/entry_points.txt
writing requirements to ../../build/temperature_system/temperature_system.egg-info/requires.txt
writing top-level names to ../../build/temperature_system/temperature_system.egg-info/top_level.txt
reading manifest file '../../build/temperature_system/temperature_system.egg-info/SOURCES.txt'
writing manifest file '../../build/temperature_system/temperature_system.egg-info/SOURCES.txt'
running build
running build_py
copying temperature_system/enhanced_publisher_node.py -> /home/henrique/ros2_ws/build/temperature_system/build/lib/temperature_system
running install
running install_lib
copying /home/henrique/ros2_ws/build/temperature_system/build/lib/temperature_system/enhanced_publisher_node.py -> /home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system
byte-compiling /home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system/advanced_monitor_node.py to advanced_monitor_node.cpython-312.pyc
  File "/home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system/advanced_monitor_node.py", line 80
    else if temperature >> self.critical_temperature_threshold:
         ^^
SyntaxError: expected ':'

byte-compiling /home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system/enhanced_publisher_node.py to enhanced_publisher_node.cpython-312.pyc
running install_data
running install_egg_info
removing '/home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/temperature_system/temperature_system.egg-info to /home/henrique/ros2_ws/install/temperature_system/lib/python3.12/site-packages/temperature_system-0.0.0-py3.12.egg-info
running install_scripts
Installing advanced_monitor_node script to /home/henrique/ros2_ws/install/temperature_system/lib/temperature_system
Installing enhanced_publisher_node script to /home/henrique/ros2_ws/install/temperature_system/lib/temperature_system
Installing logger_node script to /home/henrique/ros2_ws/install/temperature_system/lib/temperature_system
writing list of installed files to '/home/henrique/ros2_ws/build/temperature_system/install.log'
